# html5stuck

./: .gitignore  .stylelintrc.json  Cargo.toml  README.md  move.py  package.json  postcss.config.js  rollup.config.js  swf2vid.sh
css/: styles.css
html5stuck_common/: Cargo.toml
html5stuck_common/src/: lib.rs
html5stuck_renderer/: Cargo.toml
html5stuck_renderer/src/: lib.rs  main.rs
html5stuck_renderer/templates/: base.html  nav.html  page.html
html5stuck_scraper/: Cargo.toml
html5stuck_scraper/src/: lib.rs  main.rs
js/: main.js
patches/: 7934.json
