[package]
name = "html5stuck_common"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.url]
version = "2.1.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.110"
features = ["derive"]
