[package]
name = "html5stuck_renderer"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
anyhow = "1.0.28"
html5stuck_common = { path = "../html5stuck_common" }
serde_json = "1.0.53"
