[package]
name = "html5stuck_renderer"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
anyhow = "1.0.28"
html5stuck_common = { path = "../html5stuck_common" }
serde_json = "1.0.53"
rayon = "1.3.0"
html-minifier = "1.2.1"

[dependencies.indicatif]
version = "0.14.0"
features = ["with_rayon"]

[dependencies.url]
version = "2.1.1"
features = ["serde"]
