[package]
name = "html5stuck_scraper"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
attohttpc = "0.13.0"
anyhow = "1.0.28"
once_cell = "1.3.1"
serde_json = "1.0.53"
html5stuck_common = { path = "../html5stuck_common" }

[dependencies.url]
version = "2.1.1"
features = ["serde"]

[dependencies.openssl]
version = "0.10.29"
features = ["vendored"]
