[package]
name = "html5stuck_scraper"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { git = "https://github.com/leo60228/scraper.git", branch = "no-intern-classes" }
#scraper = "0.12.0"
attohttpc = "0.13.0"
anyhow = "1.0.28"
once_cell = "1.3.1"
serde_json = "1.0.53"
html5stuck_common = { path = "../html5stuck_common" }
retry = "1.0.0"
rayon = "1.3.0"

[dependencies.indicatif]
version = "0.14.0"
features = ["with_rayon"]

[dependencies.url]
version = "2.1.1"
features = ["serde"]

[dependencies.openssl]
version = "0.10.29"
features = ["vendored"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
